<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/historybg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margintop"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginend3"
            android:backgroundTint="#436F9A"
            android:onClick="returnClick"
            android:paddingLeft="@dimen/paddingleft"
            android:text="@string/button"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#A13939"
            android:onClick="resetClick"
            android:text="@string/button2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margintop"
        android:gravity="center"
        android:text="@string/header"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        android:paddingTop="@dimen/paddingtop2">

        <TextView
            android:id="@+id/pointCol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginstart"
            android:layout_marginEnd="@dimen/marginend"
            android:text="@string/col1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/levelCol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginend2"
            android:text="@string/col2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeCol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/col3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/historyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddingleft2"
            android:paddingTop="@dimen/paddingtop2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </ScrollView>

</LinearLayout>
