<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gameover"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margintop"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin2"
            android:layout_weight="0"
            android:background="@drawable/restart"
            android:contentDescription="restart game"
            android:onClick="restart" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/widght"
            android:layout_weight="8" />

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin2"
            android:layout_weight="0"
            android:background="@drawable/close"
            android:contentDescription="close game"
            android:onClick="exit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/hight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/new_highest"
            android:visibility="gone" />

        <TextView
            android:id="@+id/yourpoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameover"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#970707" />

        <TextView
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="#689F38" />
    </LinearLayout>

</LinearLayout>