<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gameover"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margintop"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin2"
            android:background="@drawable/restart"
            android:contentDescription="restart game"
            android:onClick="restart" />

        <View
            android:layout_width="@dimen/widght"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin2"
            android:background="@drawable/close"
            android:contentDescription="close game"
            android:onClick="exit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivNewHeighest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/new_highest"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameover"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FDFCFC" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#80C545" />

        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#021695" />

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="80dp" />


</LinearLayout>